--- a/Project 1 - Blog Design Page/package.json
+++ b/Project 1 - Blog Design Page/package.json
@@ -11,6 +11,9 @@
     "build:css": "postcss src/index.css -o src/tailwind.css"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.16.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
